A fix for AMEC-1714, don't show ellipsis that should be hidden by the roll over

--- a/webapp/src/main/webapp/css/global.css
+++ b/webapp/src/main/webapp/css/global.css
@@ -1745,6 +1745,7 @@ html:not(.js) .btn-reveal:hover .content {
   visibility: visible;
   cursor: default;
   opacity: 1;
+  z-index: 5;
 }
 
 #subject-area-sidebar-block-help p {
